@@ -113,7 +113,8 @@ create_main_toolbar (GtkWidget * anjuta_gui, MainToolbar * toolbar)
 	toolbar->find =
 		anjuta_util_toolbar_append_stock (toolbar1, GTK_STOCK_FIND, 
 						   _("Search for the given string in the current file"),
-						   G_CALLBACK (on_toolbar_find_clicked), NULL);
+						   G_CALLBACK (on_toolbar_find_clicked),
+						   GINT_TO_POINTER(TRUE));
 
 	toolbar->find_combo = gtk_combo_new ();
 	gtk_widget_ref (toolbar->find_combo);
@@ -159,16 +160,18 @@ create_main_toolbar (GtkWidget * anjuta_gui, MainToolbar * toolbar)
 						   _("Context sensitive help"),
 						   G_CALLBACK (on_toolbar_help_clicked), NULL);
 	
-	gtk_signal_connect (GTK_OBJECT (toolbar->find_entry),
-			    "activate", GTK_SIGNAL_FUNC (on_toolbar_find_clicked), NULL);
-	gtk_signal_connect (GTK_OBJECT (toolbar->find_entry),
-			    "changed", GTK_SIGNAL_FUNC (on_toolbar_find_incremental), NULL);
-	gtk_signal_connect (GTK_OBJECT (toolbar->find_entry),
-			    "focus_in_event",
-			    GTK_SIGNAL_FUNC (on_toolbar_find_incremental_start), NULL);
-	gtk_signal_connect (GTK_OBJECT (toolbar->find_entry),
-			    "focus_out_event",
-			    GTK_SIGNAL_FUNC (on_toolbar_find_incremental_end), NULL);
+	gtk_signal_connect (GTK_OBJECT (toolbar->find_entry), "activate",
+						GTK_SIGNAL_FUNC (on_toolbar_find_clicked),
+						GINT_TO_POINTER(TRUE));
+	gtk_signal_connect (GTK_OBJECT (toolbar->find_entry), "changed",
+						GTK_SIGNAL_FUNC (on_toolbar_find_incremental),
+						NULL);
+	gtk_signal_connect (GTK_OBJECT (toolbar->find_entry), "focus_in_event",
+						GTK_SIGNAL_FUNC (on_toolbar_find_incremental_start),
+						NULL);
+	gtk_signal_connect (GTK_OBJECT (toolbar->find_entry), "focus_out_event",
+						GTK_SIGNAL_FUNC (on_toolbar_find_incremental_end),
+						NULL);
 
 	gtk_signal_connect (GTK_OBJECT (toolbar->line_entry), "activate",
 			    GTK_SIGNAL_FUNC (on_toolbar_goto_clicked), NULL);
