@@ -1,3 +1,13 @@
+2003-09-25  Naba Kumar  <naba@gnome.org>
+
+	* src/toolbar_callbacks.c: Fixed start of incremental search.
+	
+	Patch from: Jean-Noel Guiheneuf  <jnoel@saudionline.com.sa>
+	* src/controls.c, src/main_menubar.c, src/main_menubar.h,
+	src/main_menubar_def.h, src/mainmenu_callbacks.c,
+	src/toolbar_callbacks.c, src/toolbar.c: Added reverse search
+	menu and implementation.
+
 2003-09-24  Pavol Bosik  <bosikp@frcatel.fri.utc.sk>
 
 	Reviewed by 2003-09-24  Naba Kumar  <naba@gnome.org>
